--- a/package.json
+++ b/package.json
@@ -1,20 +1,15 @@
 {
-  "name": "@nuvolo/servicenow-types",
+  "name": "sn-types",
   "version": "0.2.0",
   "description": "",
   "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "postpublish": "npm publish --ignore-scripts --public --@nuvolo:registry='https://registry.npmjs.org'"
-  },
   "author": "",
   "license": "MIT",
   "dependencies": {},
   "devDependencies": {
-    "@types/dotenv": "^6.1.1",
     "@types/node": "^12.7.4",
     "@types/prettier": "^1.18.2",
-    "axios": "^0.19.0",
+    "axios": "^0.27.2",
     "dotenv": "^8.1.0",
     "prettier": "^1.18.2",
     "striptags": "^3.1.1",
