--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "sn-types",
   "version": "0.2.0",
   "description": "",
-  "main": "index.js",
+  "main": "dist/index.js",
   "author": "",
   "license": "MIT",
   "devDependencies": {
@@ -11,17 +11,10 @@
     "axios": "^0.27.2",
     "dotenv": "^8.1.0",
     "dts-bundle-generator": "^6.13.0",
-    "esbuild": "^0.15.9",
     "html-entities": "^2.3.3",
     "prettier": "^1.18.2",
     "striptags": "^3.1.1",
     "ts-node": "^10.9.1",
-    "typescript": "^3.6.2"
-  },
-  "types": "server/index.d.ts",
-  "files": [
-    "server",
-    "client",
-    "util"
-  ]
+    "typescript": "^3.7.2"
+  }
 }
